AutoDocker gets proper records